--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
     "three": "^0.156.1"
   },
   "devDependencies": {
